# pipenv2deb

./: .gitignore  LICENSE  README.md  build.sh  setup.cfg  setup.py  upload_package_to_pypi.sh  upload_package_to_testpypi.sh
debian/: control  preinst
examples/auto_start_cmd/: README.md  file_logger.py
examples/auto_start_cmd/debian/: control  postinst  postrm  prerm
examples/auto_start_cmd/init.d/: file_logger
examples/gui_hello_world/: Pipfile  README.md  create_virtual_env.sh  gui-hello-world.py  remove_virtual_env.sh
examples/gui_hello_world/debian/: control  postinst
examples/gui_hello_world/root-fs/usr/share/applications/: gui-hello-world.desktop
examples/hello_world/: README.md  create_virtual_env.sh  exclude_folder_list.txt  hello_world.py  remove_virtual_env.sh
examples/hello_world/debian/: control  postinst  preinst
examples/hello_world/non_pip_python_libs/: __init__.py
examples/hello_world/root-fs/tmp/: hello_world_installed.txt
pipenv2deb/: __main__.py
python/: pipenv2deb.py
scripts/: pipenv2deb
src/pipenv2deb/: __main__.py
