[metadata]
name = pipenv2deb
version = 2.0.1
author = Paul Austen
author_email = pausten.os@gmail.com
description = A tool to produce a deb installer for a python project that uses pipenv.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pjaos/pipenv2deb
project_urls =
    Bug Tracker = https://github.com/pjaos/pipenv2deb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
